[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdbo_benchmark"
version = "0.1.0"
dependencies = [
    "numpy<2",
    "botorch",
    "seaborn",
    "CairoSVG",
    "wandb",
    "click",
    "poli@git+https://github.com/MachineLearningLifeScience/poli.git@dev",
    "poli-baselines@git+https://github.com/MachineLearningLifeScience/poli-baselines.git@main"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true